--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,10 @@
 <body>
     <header class="header">
         <a class="header-link" href="index.html">
-            <h1 class="brand">
+            <picture class="brand">
+                <source srcset="./assets/logoipsum-dark.png" media="(prefers-color-scheme: dark)">
                 <img class="brand__svg" src="./assets/logoipsum-332.svg" alt="Logotipo">
-            </h1>
+            </picture>
         </a>
 
         <nav class="nav">
