--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
 
         <nav class="nav">
-            <a class="nav__link" href="about-me.html">About me</a>
+            <a class="nav__link" href="about-me.html">Acerca de mi</a>
             <a class="nav__link" href="projects.html">Projects</a>
             <a class="nav__link" href="contact.html">Contact</a>
             <a class="nav__link nav__link--primary" href="./assets/cv.pdf" download="cv.pdf">Download CV</a>
